# EffectiveCXXLearning

./: .gitignore  README.md
Item10/: main.cpp
Item11/: impl1.cpp  impl2.cpp  main.cpp
Item12/: CMakeLists.txt  customer.cpp  customer.h  main.cpp  priority_customer.cpp  priority_customer.h
Item14/: CMakeLists.txt  s1.cpp  s2.cpp  s3.cpp  s4.cpp
Item15/: CMakeLists.txt  main.cpp
Item18/: main.cpp
Item20/: main.cpp
Item21/: main.cpp
Item25/: CMakeLists.txt  default_swap.cpp  specialized_swap.cpp  widget.h  widget_wo_inline.h
Item28/: CMakeLists.txt  diff_with_main.cpp  main.cpp
Item29/: README.md
Item30/: README.md
Item31/: CMakeLists.txt  Person.cpp  Person.h  PersonImpl.cpp  date.cpp  main.cpp
Item31/HandlePerson/: CMakeLists.txt  Person.h  PersonImpl.h  PersonImplFwd.h  address.cpp  address.h
Item31/InterfacePerson/: AsiaPerson.cpp  AsiaPerson.h  CMakeLists.txt  Person.cpp  Person.h
Item31/Person/: CMakeLists.txt  Person.cpp  Person.h  addressfwd.h  date.h  datefwd.h
Item35/: CMakeLists.txt  NVI.cpp  classic_strategy_pattern_main.cpp  function_pointers.cpp
Item35/GameCharacter/: CMakeLists.txt  game_character.cpp  game_character.h  health_calc_func.cpp  health_calc_func.h
Item37/: improved_main.cpp  main.cpp
Item38/: README.md
Item5/: CMakeLists.txt  main.cpp
Item6/: CMakeLists.txt  step1.cpp  (+1 more)
generic_handle/: CMakeLists.txt  basket.cpp  basket.h  bulk_item.cpp  disc_item.cpp  handle.h  item_base.cpp  sales.cpp  sales_item.cpp  sales_item.h
generic_handle/book/: CMakeLists.txt  handle.h  item_base.h  sales_item.h
generic_handle/build_sales/: sales
(+64 files in other folders)
